Fix missing label on mobile for attacking allies

--- a/src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
+++ b/src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
@@ -32,7 +32,13 @@
 
 @media only screen and (max-width: 480px) {
   .label.label {
-    display: none;
+    font-size: 0.45rem;
+    padding: 1px 2px;
+    bottom: 4px;
+    left: 2px;
+    right: 1px;
+    border-radius: 2px;
+    border: 0.25px solid var(--theme-primary);
   }
 }
 
@@ -680,9 +686,6 @@
     flex-shrink: 0;
   }
 
-  .label.label {
-    display: none;
-  }
 }
 
 /* Keyframe animation for tooltip entrance */
@@ -778,5 +781,15 @@
     font-size: 2.5dvw;
     padding: 1px;
     margin: 0.05em;
+  }
+
+  .label.label {
+    font-size: 1.8dvw;
+    padding: 1px 2px;
+    bottom: 4px;
+    left: 2px;
+    right: 1px;
+    border-radius: 2px;
+    border: 0.25px solid var(--theme-primary);
   }
 }
